<resources>
    <string name="app_name">Togather</string>
    <string name="frag_search_category_title_item">שם המוצר</string>
    <string name="category_name">קטגוריה</string>
    <string name="search_posts_slash">/</string>
    <string name="create_group">קבוצת רכישה</string>
    <string name="create_power_group">כח רכישה</string>
    <string name="group_mail_body">שלום רב.
מתארגנת קבוצת רכישה למוצר - %1$s שאתם מוכרים, והקבוצה מחפשת מנהל שימכור את המוצר לחברי הקבוצה. במידה ותצטרפו כמנהלים תהיה לכם את היכולת להחליט את מחיר הפריט אותו תמכרו, לכמה אנשים ועד איזה תאריך. אני מזמין אותך לנהל את הקבוצה, ולהכנס אל הלינק למטה להורדת האפליקצייה(לאנדרואיד בלבד כרגע), וצפייה בפרטי הקבוצה. טיפ קטן : בקבוצות רכישה נהוג להוזיל את מחיר המוצר ממחיר השוק המקורי, לקבל כמות רבה יותר של מכירות בבת אחת וכתוצאה מכך תרוויחו יותר. את כמות האנשים המינימלית והמקסימלית של אנשים בקבוצה אתם תקבעו. במידה והמוצר לא יגיע למינימום האנשים אותה דרשתם בעבור רכישת המוצר במחיר המבצע, ועבר התאריך, המכירה לא תתבצע.
לפרטים נוספים על הקבוצה ללא הרשמה(ניתן להרשם בחינם לאחר מכן) לחץ כאן > %2$s
*מייל זה נשלח מאפליקציית Togather- הרשת החברתית הראשונה לקבוצות רכישה</string>
    <string name="group_mail_ending">טיפ קטן : בקבוצות רכישה נהוג להוזיל את מחיר המוצר ממחיר השוק המקורי, לקבל כמות רבה יותר של מכירות בבת אחת וכתוצאה מכך תרוויחו יותר. את כמות האנשים המינימלית והמקסימלית של אנשים בקבוצה אתם תקבעו. במידה והמוצר לא יגיע למינימום האנשים אותה דרשתם בעבור רכישת המוצר במחיר המבצע, ועבר התאריך, המכירה לא תתבצע.</string>
    <string name="btn_save_profile">שמירת פרופיל</string>
    <string name="title_create_user_act">השלמת הרשמה</string>
    <string name="title_activity_deep_link">DeepLinkActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="deep_link_group_id">groupId</string>
    <string name="deep_link_group_position">groupPosition</string>
    <string name="upload_post_choose_et">בחירה</string>
    <string name="profile_secondary_title">פרטים נוספים:</string>
    <string name="profile_page_title">הפרופיל שלי</string>
    <string name="user_name">שם משתמש</string>
    <string name="proffession">מקצוע</string>
    <string name="company_tv">שם העסק</string>
    <string name="website_url">אתר</string>
    <string name="email_string">אימייל</string>
    <string name="description_tv">תיאור</string>
    <string name="group_purchasing">קבוצות רכישה</string>
    <string name="profile_store">חנות</string>
    <string name="profile_followers_tv">עוקבים</string>
    <string name="group_view_share_string">שלום חברים יקרים!
ידעתם שמתארגנת קבוצת רכישה למוצר %1$s מתחת לאף שלכם? אנחנו מחפשים אנשים המעוניינים לרכוש את המוצר %2$s בכדי שהמכירה תוכל להגיע למספר האנשים הדרוש ונוכל לרכוש את המוצר במחיר מוזל!
הורידו והרשמו אל אפליקציית Togather (למשתמשי אנדרואיד בלבד כרגע) מספר המקומות בקבוצה מוגבל.
לינק להורדת האפליקציה > %3$s</string>
    <string name="search_item_btn_like_string">0</string>
    <string name="start_1_welcome">יוקר המחייה בארץ הוא מהגבוהים בעולם! הכירו את אפליקציית Togather- הרשת החברתית הראשונה בארץ לרכישה באמצעות קבוצות רכישה שחרטה על דגלה מלחמה ביוקר המחייה והובלת ירידת מחירים במגוון תחומים בשוק.</string>
    <string name="create_group_description">קבוצה עם מנהל. בעלי עסקים יקרים- מטרתנו היא להגדיל את מחזור המכירות שלכם ואת כמות הלקוחות. צרו קבוצת רכישה למוצרים במחיר מוזל יחסית לשוק והתחילו להרוויח על מוצר אחד המון רכישות.</string>
    <string name="create_power_group_description">קבוצה ללא מנהל. צרו קבוצה למטרת קנייה משותפת של מוצר/פריט. באופצייה של כוח רכישה תוכלו לשלוח מייל מובנה שנכתב על ידי מומחי קבוצות הרכישה שלנו לבעלי העסקים והכל בלחיצת כפתור.</string>
    <string name="shipment_method_all">איסוף/משלוח</string>
    <string name="shipment_delivery">משלוח</string>
    <string name="shipment_take_away">איסוף עצמי</string>
    <string name="company_name">שם בית העסק</string>
    <string name="create_prof_profession">מקצוע/תפקיד</string>
    <string name="private_name">שם פרטי</string>
    <string name="email_input">אימייל(ללא אימייל אין אופציה לשנות סיסמא)</string>
    <string name="website_input">אתר</string>
    <string name="phone_input">מספר טלפון</string>
    <string name="register_password">סיסמא (6 תווים ומעלה)</string>
    <string name="register_password_repeat">חזרו על הסיסמא</string>
    <string name="phone_number">מספר טלפון נייד</string>
    <string name="deep_link_title">צפייה בפרטי הקבוצה</string>
    <string name="group_title">כותרת</string>
    <string name="item_name">שם המוצר</string>
    <string name="deep_link_btn">הצטרפות לקבוצה</string>
    <string name="location">מיקום</string>
    <string name="delete_image">מחיקת תמונה</string>
    <string name="edit">עריכה</string>
    <string name="btn_ok">אישור</string>
    <string name="login_page_title">כניסה</string>
    <string name="login_password">סיסמא</string>
    <string name="login_btn">כניסה</string>
    <string name="login_register_btn">הרשמה</string>
    <string name="show_password">הצגת סיסמא</string>
    <string name="register_page_title">יצירת משתמש</string>
    <string name="verification_code">קוד אימות</string>
    <string name="register_send_verification_sms">שליחת קוד אימות</string>
    <string name="register_verify_code_text">אישור קוד אימות</string>
    <string name="register_login_btn">מסך כניסה</string>
    <string name="original_price">מחיר מקורי</string>
    <string name="group_price">מחיר לקבוצה</string>
    <string name="min_people_title">כמות אנשים מינימלית בה תחל המכירה</string>
    <string name="max_people_title">כמות אנשים מקסימלית</string>
    <string name="category">קטגוריה</string>
    <string name="end_date_title">תאריך סיום המכירה</string>
    <string name="create_group_btn">יצירת קבוצה</string>
    <string name="choose_image">בחירת תמונה</string>
    <string name="update_profile_comp_name">שם חברה</string>
    <string name="logout">התנתקות מהמשתמש</string>
    <string name="delete_user">מחיקת משתמש</string>
    <string name="leave_group">יציאה מהקבוצה</string>
    <string name="create_fragment_title">יצירת קבוצות רכישה</string>
    <string name="be_manager_up_note">* יש צורך למלא את כל השדות הבאים על מנת להפוך למנהל ולאחר מכן ניתן לערוך את פרטי הקבוצה.</string>
    <string name="group_discount_price">מחיר מבצע לקבוצה</string>
    <string name="be_manager_supply_method">אופן אספקת המוצר ללקוח</string>
    <string name="item_description">תיאור מוצר</string>
    <string name="finish_btn">סיום</string>
    <string name="thank_you">אוקיי</string>
    <string name="code">קוד לרכישה:</string>
    <string name="purchase_group_dialog">הגעתם ליעד האנשים בקבוצה והמכירה הקבוצתית החלה! זכיתם בקוד אישי איתו תזדהו מול המוכר שאתם מקבוצת הרכישה</string>
    <string name="purchase_title">רכישה</string>
    <string name="payment_1st_tv">פרטים ליצירת קשר :</string>
    <string name="payment_details">* ייתכנו עלויות נוספות בעבור שילוח המוצר.</string>
    <string name="payment_dialog_title">מזל טוב!</string>
    <string name="profile_groups">קבוצות רכישה</string>
    <string name="bundle_group_user_type">userType</string>
    <string name="refresh_page">רעננו את הדף</string>
</resources>